manifests/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 81
      name: web
